# xfmpc

./: .cppcheck-false-positives  .gitignore  .scan-build-false-positives  AUTHORS  ChangeLog  ChangeLog.pre-r7517  IDEAS  Makefile.am  NEWS  README  README.md  THANKS  autogen.sh  configure.ac  configure.ac.in  configure.in.in  meson.build  module.xml  xfmpc.1  xfmpc.desktop.in
plugins/: Makefile.am
plugins/artwork/: Makefile.am  artwork.vala
plugins/lyrics/: Makefile.am  lyrics.vala
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lo.po  lt.po  ms.po  nb.po  (+24 more)
src/: Makefile.am  config.vapi  dbbrowser.c  dbbrowser.h  dbbrowser.vala  extended-interface.c  extended-interface.h  extended-interface.vala  interface-ui.h  interface-ui.xml  interface.c  interface.h  interface.vala  main-ui.h  main-ui.xml  main-window.c  main-window.h  main-window.vala  main.c  main.vala  meson.build  mpdclient.c  mpdclient.h  mpdclient.vapi  paned-interface.vala  playlist.c  playlist.h  playlist.vala  plugin-interfaces.vala  plugin-loader.vala  preferences-dialog.c  preferences-dialog.h  preferences-dialog.vala  preferences.c  preferences.h  preferences.vala  progress-bar.vala  shortcuts-dialog.vala  song-dialog.c  song-dialog.h  (+7 more)
src/libc/: Makefile.am  meson.build  mpdclient.c  mpdclient.h  mpdclient.vapi
vapi/: config.vapi  libxfce4util-1.0.vapi  libxfcegui4-1.0.vapi  mpdclient.vapi  preferences.vapi  xfce-arrow-button.vapi
